# ServerClient

./: .gitignore  CMakeLists.txt
include/: Defines.hpp  defines.h
include/client/: client.h
include/server/: server.h
include/socket/: Socket.hpp
src/client/: client.cpp  main.cpp
src/server/: main.cpp  server.cpp
src/socket/: Socket.cpp
